src/theme/SectionGrid/styles.module.css
.sectionContainer {
  padding-top: 2rem;
  padding-bottom: 2rem;
  max-width: 100%;
}

.gridContainer {
  display: grid;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  row-gap: 2rem;
}

.leftContainer {
  max-width: 32rem;
  margin: 0;
  text-align: left;
}

.header {
  font-size: 1.875rem;
  line-height: 2.25rem;
  font-weight: 700;
}

.content {
  margin-top: 1rem;
  color: #4b5563;
}

.link {
  display: inline-block;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  padding-left: 3rem;
  padding-right: 3rem;
  margin-top: 2rem;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 500;
  color: #ffffff;
  background-color: #0098ef;
  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 300ms;
}

.link:hover {
  text-decoration: none;
  background-color: #0098ef;
  color: #fff;
}

.rightContainer {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  gap: 1rem;
}

.iconContainer {
  display: flex;
  width: 100%;
  align-items: center;
  color: var(--ifm-font-color-base);
  --icon-border-color: #e0e0e0;
}

[data-theme="dark"] .iconContainer {
  --icon-border-color: #152c3c;
}

[data-theme="dark"] .iconContainer:hover {
  --icon-border-color: #76d9bd;
}

.iconContainer:hover {
  text-decoration: none;

  --icon-border-color: #0098ef;

  --tw-ring-inset: ;
  --tw-ring-offset-width: 0px;
  --tw-ring-opacity: 1;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
  --ring-color: #e5e7eb;
}

.icon {
  width: 2.3rem;
  height: 2.3rem;
  padding: 0.2rem;

  border-radius: 6px;
  border: 1px solid var(--icon-border-color);
}

.icon:hover {
  border: 1px solid var(--icon-border-color);
}

.iconHeader {
  margin: 0.5rem 0.5rem;
}

@media (min-width: 640px) {
  .sectionContainer {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }

  .header {
    font-size: 2.25rem;
    line-height: 2.5rem;
  }
}

@media (min-width: 1024px) {
  .sectionContainer {
    padding-top: 4rem;
    padding-bottom: 4rem;
  }

  .gridContainer {
    grid-template-columns: 3fr 7fr;
    column-gap: 4rem;
    align-items: center;
  }

  .leftContainer {
    margin: 0;
    text-align: left;
  }
}

